--- a/tables_app/src/main/res/values/strings.xml
+++ b/tables_app/src/main/res/values/strings.xml
@@ -432,4 +432,12 @@
 
     <string name="location_permission_rationale">ODK Tables needs access to your device\'s location to display it on Map View</string>
     <string name="location_permission_perm_denied">My Location feature disabled</string>
+    <string name="location_unavailable">Location is unavailable</string>
+
+    <string name="acc_value">0 m</string>
+    <string name="distance">Distance: %1$s</string>
+    <string name="meters">Meters</string>
+    <string name="meter_shorthand">m</string>
+    <string name="bearing">Bearing: %1$s° %2$s</string>
+    <string name="heading">Heading: %1$s° %2$s</string>
 </resources>
