WIP: Navigate. Added arrive button

--- a/tables_app/src/main/res/values/strings.xml
+++ b/tables_app/src/main/res/values/strings.xml
@@ -440,4 +440,5 @@
     <string name="meter_shorthand">m</string>
     <string name="bearing">Bearing: %1$s° %2$s</string>
     <string name="heading">Heading: %1$s° %2$s</string>
+    <string name="navigate_arrive_button">Arrive</string>
 </resources>
