Add Javascript and arrival

--- a/tables_app/src/main/res/values/strings.xml
+++ b/tables_app/src/main/res/values/strings.xml
@@ -441,4 +441,5 @@
     <string name="bearing">Bearing: %1$s° %2$s</string>
     <string name="heading">Heading: %1$s° %2$s</string>
     <string name="navigate_arrive_button">Arrive</string>
+    <string name="navigate_cancel_button">Cancel</string>
 </resources>
